--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -9,7 +9,7 @@ jobs:
     name: Deploy LMS
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: copy file via ssh using key
       uses: appleboy/scp-action@master
       with:
