Changed the name of the workflow

--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -16,5 +16,5 @@ jobs:
         host: ${{ secrets.QA_HOST }}
         username: ${{ secrets.QA_APP_USER }}
         key: ${{ secrets.QA_APP_SECRET }}
-        source: "lms"
-        target: "/apps"
+        source: "lms/"
+        target: "/apps/"
