--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -5,7 +5,6 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-
   deploy:
     name: Deploy LMS
     runs-on: ubuntu-latest
@@ -16,6 +15,18 @@ jobs:
         host: ${{ secrets.QA_HOST }}
         username: ${{ secrets.QA_APP_USER }}
         key: ${{ secrets.QA_APP_SECRET }}
-        source: "."
+        source: "./*"
         target: "/apps/lms"
         rm: "true"
+  build:
+    needs: deploy
+    name: Build LMS
+    runs-on: ubuntu-latest
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.QA_HOST }}
+        username: ${{ secrets.QA_APP_USER }}
+        key: ${{ secrets.QA_APP_SECRET }}
+        script: python3 -m pip install /apps/lms/requirements.txt
