--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -15,7 +15,7 @@ jobs:
         host: ${{ secrets.QA_HOST }}
         username: ${{ secrets.QA_APP_USER }}
         key: ${{ secrets.QA_APP_SECRET }}
-        source: "./*"
+        source: "./"
         target: "/apps/lms"
         rm: "true"
   build:
