Fixing the issue related to deploying the code using CI/CD Workflow

--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -9,6 +9,7 @@ jobs:
     name: Deploy LMS
     runs-on: ubuntu-latest
     steps:
+    - users: actions/checkout@v2
     - name: copy file via ssh using key
       uses: appleboy/scp-action@master
       with:
