--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -16,7 +16,7 @@ jobs:
         host: ${{ secrets.QA_HOST }}
         username: ${{ secrets.QA_APP_USER }}
         key: ${{ secrets.QA_APP_SECRET }}
-        source: "lms-app/*,requirements.txt"
+        source: "*"
         target: "/apps/lms"
         rm: "true"
   build:
