Added run to the CI/CD Workflow

--- a/.github/workflows/lms-cicd.yml
+++ b/.github/workflows/lms-cicd.yml
@@ -31,3 +31,17 @@ jobs:
         username: ${{ secrets.QA_APP_USER }}
         key: ${{ secrets.QA_APP_SECRET }}
         script: python3 -m pip install -r /apps/lms/requirements.txt
+  run:
+    needs: build
+    name: Run LMS
+    runs-on: ubuntu-latest
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.QA_HOST }}
+        username: ${{ secrets.QA_APP_USER }}
+        key: ${{ secrets.QA_APP_SECRET }}
+        script: |
+          sudo systemctl restart supervisor
+          sudo systemctl restart nginx
